fixed splash description spacing

--- a/client/scss/index.scss
+++ b/client/scss/index.scss
@@ -16,6 +16,9 @@ body {
 
 .splash-container {
     margin: 125px auto 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .description-container {
